# sfml-imgui

./: .clang-format  .gitignore  CMakeLists.txt  Piano_di_lavoro.md  README.md
data/asc/: gausshills_1.asc
data/geo/: aletsch_32T.deflat.persistence.geo.csv  aletsch_32T.deflat.scalespace.geo.csv  gausshills_1.geo.csv  gausshills_1.persistence.geo.csv  gausshills_1.scalespace.geo.csv
dependencies/: CMakeLists.txt
dependencies/config/: imguiConfig.h
shaders/: heatmap.frag  heatmap.vert
src/: CMakeLists.txt  app.cpp  app.hpp  cellTooltip.cpp  cellTooltip.hpp  game.cpp  game.hpp  geoData.cpp  geoData.hpp  gridOverlay.cpp  gridOverlay.hpp  heatmap.cpp  heatmap.hpp  main.cpp  uiManager.cpp  uiManager.hpp  viewControls.cpp  viewControls.hpp
src/utils/: CMakeLists.txt  ascParser.cpp  ascParser.hpp  geoCsvParser.cpp  geoCsvParser.hpp  geoUtils.cpp  geoUtils.hpp  wktParser.cpp  wktParser.hpp
utils/: convertMplColormap.py  plotAsc.py
